# esp_lcd_ili9341v

./: README.md
app_lvgl/: CMakeLists.txt  Kconfig  app_lvgl.c
app_lvgl/include/: app_lvgl.h
